refactor: reorganize imports in DashboardService and FuncionarioCompetenciasResponseDTO for clarity; add SonarQube issue ignore criteria in pom.xml